添加资源打包相关工具

--- a/Editor/NamedAsset.Editor.asmdef
+++ b/Editor/NamedAsset.Editor.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "NamedAsset.Editor",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "NamedAsset.Runtime"
+    ],
     "includePlatforms": [
         "Editor"
     ],
